--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,6 +2,30 @@ spring:
   application:
     name: apimanagement
 
+  subservices:
+    user-management:
+      url: http://gromokoso_usermanagement:8080
+    mcp-management:
+      url: http://gromokoso_mcpmanagement:8080
+    spec2tool:
+      url: http://gromokoso_spec2tool:8080
+
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+
+  datasource:
+    url: jdbc:h2:mem:dcbapp
+    driverClassName: org.h2.Driver
+    username: sa
+    password: password
+
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: update
+
 ---
 # Preconfigured profile for local testing
 spring:
