--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,7 +33,7 @@ stages:
     - docker stop $CONTAINER_NAME || true
     - docker rm $CONTAINER_NAME || true
     - docker network create internal_net || true
-    - docker run e SPRING_PROFILES_ACTIVE=prod -d --network=internal_net -v /home/swt2025/$CONTAINER_NAME/data:/app/data --restart=always --name $CONTAINER_NAME $DOCKER_IMAGE
+    - docker run -e SPRING_PROFILES_ACTIVE=prod -d --network=internal_net -v /home/swt2025/$CONTAINER_NAME/data:/app/data --restart=always --name $CONTAINER_NAME $DOCKER_IMAGE
   services:
     - docker:dind
   tags:
