--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,15 +16,20 @@ spring:
       path: /h2-console
 
   datasource:
-    url: jdbc:h2:mem:dcbapp
-    driverClassName: org.h2.Driver
-    username: sa
-    password: password
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
+    driver-class-name: org.mariadb.jdbc.Driver
 
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MariaDBDialect
+    show-sql: true
+    open-in-view: false
 
 server:
   port: 8080
