--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,8 @@ cache:
   
 variables:
   DOCKER_IMAGE_APP: $CI_REGISTRY_IMAGE:latest
-  CONTAINER_NAME: "GroMoKoSo_$CI_PROJECT_NAME"
+  CONTAINER_NAME: "gromokoso_$CI_PROJECT_NAME"
+  CONTAINER_NAME_DB: "gromokoso_${CI_PROJECT_NAME}_db"
   MAVEN_OPTS: "-Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository"
 
 stages:
@@ -33,7 +34,27 @@ stages:
     - docker stop $CONTAINER_NAME || true
     - docker rm $CONTAINER_NAME || true
     - docker network create internal_net || true
-    - docker run -e SPRING_PROFILES_ACTIVE=prod -d --network=internal_net -v /home/swt2025/$CONTAINER_NAME/data:/app/data --restart=always --name $CONTAINER_NAME $DOCKER_IMAGE
+
+    - docker run
+      --name $CONTAINER_NAME_DB
+      --restart=always -d
+      --network=internal_net
+      -v /home/swt2025/$CONTAINER_NAME_DB/data:/app/data
+      -e MYSQL_ROOT_PASSWORD=$CI_MYSQL_ROOT
+      -e MYSQL_DATABASE=apimanagement_db
+      -e MYSQL_USER=$CI_MYSQL_USER
+      -e MYSQL_PASSWORD=$CI_MYSQL_PASSWORD
+      mariadb:12.0.2 || true
+
+    - docker run
+      -e SPRING_PROFILES_ACTIVE=prod
+      -e SPRING_DATASOURCE_URL=jdbc:mariadb://$CONTAINER_NAME_DB:3306/apimanagement_db
+      -e SPRING_DATASOURCE_USERNAME=$CI_MYSQL_USER
+      -e SPRING_DATASOURCE_PASSWORD=$CI_MYSQL_PASSWORD
+      -d --network=internal_net
+      -v /home/swt2025/$CONTAINER_NAME/data:/app/data
+      --restart=always
+      --name $CONTAINER_NAME $DOCKER_IMAGE
   services:
     - docker:dind
   tags:
