--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -34,6 +34,10 @@ spring:
 server:
   port: 8080
 
+logging:
+  level:
+    de.thm.apimanagement: DEBUG
+    org.hibernate.sql: DEBUG
 ---
 # Preconfigured profile for local testing
 spring:
