--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,10 @@
             <artifactId>mariadb-java-client</artifactId>
             <version>3.5.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+        </dependency>
     </dependencies>
 
 	<build>
