--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
             <artifactId>mariadb-java-client</artifactId>
             <version>3.5.6</version>
         </dependency>
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-project</artifactId>
+            <version>2.2.21</version>
+        </dependency>
     </dependencies>
 
 	<build>
