--- a/pom.xml
+++ b/pom.xml
@@ -64,9 +64,9 @@
             <version>3.5.6</version>
         </dependency>
         <dependency>
-            <groupId>io.swagger.core.v3</groupId>
-            <artifactId>swagger-project</artifactId>
-            <version>2.2.21</version>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.8.5</version>
         </dependency>
     </dependencies>
 
